# rt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  License.txt  README.md  conanfile.txt  config.json  rtconfig.h.in  setting.nn  vcpkg.json
cmake/: config.cmake
src/: main.cc  main.cxx
